2004-08-06  Duncan Mak  <duncan@ximian.com>

	* ConfigurationElement.cs: Added stubs.

	* ConfigurationProperty.cs:
	* ConfigurationPropertyCollection.cs:
	* ConfigurationValidationAttribute.cs: Added.

	* ConfigurationPropertyFlags.cs: 
	* ConfigurationUpdateMode.cs: Added 2.0 enumerations.	

2004-06-15 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ConfigurationSettings.cs: allow empty <configSections>.

2004-05-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ConfigurationSettings.cs: don't ask me why, but the .cctor
	initialization of 'instance' field does no longer work.

2004-05-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ConfigXmlDocument.cs: removed method that was supposed to be internal.

	* ConfigurationSettings.cs: instead of calling the overload that doesn't
	exist in MS, use what we have when loading an external file.

2004-04-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ConfigXmlDocument.cs: fixed overloaded Load and added a new one that
	sets the file name.

	* ConfigurationSettings.cs: use the new Load in ConfigXmlDocument when
	loading sections.

	* NameValueFileSectionHandler.cs: don't fails if the path for the 'file'
	attribute doesn't have a directory.

	Closes bug #57244.

2004-03-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ConfigurationSettings.cs: removed FileWatcherCache. See bug #53445.

2003-12-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ConfigurationSettings.cs: initialize config in
	ChangeConfigurationSettings if it has not been done yet. Patch by
	George Kodinov gkodinov@openlinksw.co.uk). Fixes bug #51643.

2003-12-02  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ConfigurationSettings.cs: handle allowdefinition and allowlocation,
	added locks, don't reopen the file for every new section to be read,
	but keep them as strings and build the section handlers with that.
	Also allow changing the configuration system (used from System.Web).

2003-11-17 Ben Maurer  <bmaurer@users.sourceforge.net>
