@@ -27,6 +27,7 @@
 //
 
 #if NET_2_0
+#if XML_DEP
 using System.Collections;
 using System.Xml;
 
@@ -181,4 +182,5 @@ namespace System.Configuration
                 }
         }
 }
+#endif
 #endif
