@@ -27,6 +27,7 @@
 //
 
 #if NET_2_0
+#if XML_DEP
 using System;
 using System.ComponentModel;
 
@@ -109,4 +110,5 @@ namespace System.Configuration
                 }
         }
 }
+#endif
 #endif
